--- a/index.css
+++ b/index.css
@@ -2,6 +2,14 @@ div, header, footer {
 	border: 1px dashed black;
 }
 
+article {
+	border: 2px solid green;
+}
+
+section {
+	border: 1px dashed red;
+}
+
 header {
 	text-align: center;
 	color: blue;
@@ -11,6 +19,7 @@ footer {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
+	padding: 5px;
 }
 
 footer div {
@@ -33,10 +42,31 @@ footer div > * {
 }
 
 #left {
-	width: 70%;
+	width: 65%;
 }
 
 #right {
-	width: 20%;
+	width: 35%;
 }
 
+#projects article {
+	width: 80%;
+	padding: 10px;
+	margin: 20px auto;
+}
+
+#projects section.link {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+}
+
+#projects p,
+#projects h3 {
+	margin: 0px;
+	padding: 5px;
+}
+
+#projects h3 {
+	text-align: center;
+}
