--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
+/*html {
+	overflow: hidden;
+}*/
+
+a {
+	text-decoration: underline;
+}
+a:hover {
+	font-weight: bold;
+}
+
 /* scaffolding borders */
 div, header, footer {
 	border: 1px dashed black;
@@ -12,14 +23,34 @@ section {
 /* header */
 header {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: space-between;
 	text-align: center;
+	padding: 15px;
+	flex-wrap: wrap;
+}
+header h1 {
+	font-size: 40pt;
+	margin: 10px auto;
 }
 nav {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
+	border: 2px dashed gray;
+	border-radius: 10px;
+	margin: auto;
+}
+nav p {
+	padding: 2px 4px;
+	margin: 12px 12px;
+	font-family: monospace;
+	font-size: 14pt;
+	border: 1pt dashed black;
+	border-radius: 5px;
+}
+nav a {
+	color: black;
 }
 
 /* footer */
@@ -67,6 +98,7 @@ footer div > * {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
+	text-align: center;
 }
 
 .feed article p,
