--- a/index.css
+++ b/index.css
@@ -23,11 +23,11 @@ section {
 /* header */
 header {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	
 	text-align: center;
 	padding: 15px;
-	flex-wrap: wrap;
 }
 header h1 {
 	font-size: 40pt;
@@ -36,7 +36,8 @@ header h1 {
 nav {
 	display: flex;
 	justify-content: center;
-	flex-wrap: wrap;
+	flex-flow: row wrap;
+	
 	border: 2px dashed gray;
 	border-radius: 10px;
 	margin: auto;
@@ -56,13 +57,14 @@ nav a {
 /* footer */
 footer {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: space-around;
+	
 	padding: 5px;
 }
 footer div {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: space-around;
 }
 footer div > * {
@@ -83,7 +85,7 @@ footer div > * {
 	height: 75vh;
 }
 
-#content .feed {
+.feed {
 	height: inherit;
 	overflow: scroll;
 }
@@ -96,7 +98,7 @@ footer div > * {
 
 .feed section.link {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: space-around;
 	text-align: center;
 }
