--- a/index.css
+++ b/index.css
@@ -104,6 +104,7 @@ footer img {
 	display: flex;
 	flex-flow: row nowrap;
 	height: 100px;
+	padding-top: 0px;
 	padding: 20px;
 }
 #introduction > * {
