--- a/index.css
+++ b/index.css
@@ -119,35 +119,56 @@ footer img {
 
 #content {
 	display: flex;
-	flex-direction: row;
+	flex-flow: row wrap;
 	justify-content: space-around;
 	height: 65vh;
 }
 
-.feed {
-	height: inherit;
-	overflow: scroll;
-	margin: 0px 1vw;
+#content > p,
+#content > p a {
+	margin: 15px;
+	order: 0;
+	text-align: center;
+	text-decoration: underline;
+	color: black;
+	font-size: 20pt;
+	
 }
 
-.feed article {
+article {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
 	padding: 10px;
-	margin: 25px 3vw;
+	margin: 15px;
 	border: 3px solid; /* color defined independently below */
 	border-radius: 10px;
 	box-shadow: 3px 5px 25px #333333;
 }
 
-.feed section {
+article section {
 	margin: 5px 3px;
+}
+
+#projects {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	flex-shrink: 2;
+	height: 85vh;
+	width: 100%;
+	overflow-x: scroll;
+	overflow-y: hidden;
 }
 
 #projects article {
 	border-color: red;
 	background-color: rgba(255, 0, 0, 0.1);
+	width: 200px;
+}
+
+#projects h2 {
+	text-align: center;
 }
 
 #blog article {
@@ -199,19 +220,4 @@ article a {
 	font-family: "Roboto Mono";
 	font-weight: bold;
 	font-size: 12pt;
-}
-
-#projects h2 {
-	text-align: center;
-}
-
-.feed > p,
-.feed > p a {
-	margin: 15px;
-	order: 0;
-	text-align: center;
-	text-decoration: underline;
-	color: black;
-	font-size: 20pt;
-	
 }
