--- a/index.css
+++ b/index.css
@@ -91,23 +91,17 @@ footer img {
 }
 
 #introduction {
-	display: flex;
-	flex-flow: row nowrap;
-	height: 150px;
-	padding-top: 0px;
-	padding: 20px;
-}
-
-#introduction > * {
+	margin: 20px;
+	text-align: justify;
 	font-family: sans-serif;
-	padding: 10px;
-	width: 100%;
 }
 
 #introduction img {
-	height: inherit;
-	width: auto;
+	float: right;
+	margin: 10px;
+	height: 150px;
 	border-radius: 25px;
+	width: auto;
 }
 #introduction ul {
 	display: flex;
@@ -115,13 +109,6 @@ footer img {
 }
 #introduction li {
 	padding: 0px 15px;
-}
-
-#content {
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-	height: 65vh;
 }
 
 #content > p,
@@ -154,6 +141,7 @@ article section {
 	flex-direction: column;
 	flex-wrap: wrap;
 	align-content: flex-start;
+	justify-content: center;
 	flex-shrink: 2;
 	height: 85vh;
 	width: 100%;
