--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+:data {
+	--project-background-opacity: 1;
+}
+
 a {
 	color: darkslategray;
 }
@@ -9,6 +13,19 @@ a:hover {
 body {
 	background-size: auto;
 	background-color: white;
+}
+
+.bordered.java {
+	border-color: rgb(175, 113, 37);
+	background-color: rgba(175, 113, 37, 0.15);
+}
+.bordered.javascript {
+	border-color: rgb(240, 223, 101);
+	background-color: rgba(240, 223, 101, 0.15);
+}
+.bordered.php {
+	border-color: rgb(80, 94, 147);
+	background-color: rgba(80, 94, 147, 0.15);
 }
 
 header {
@@ -140,28 +157,19 @@ article section {
 	flex-direction: column;
 	flex-wrap: wrap;
 	align-content: flex-start;
-	justify-content: center;
+	justify-content: flex-start;
 	flex-shrink: 2;
-	height: 85vh;
-	width: 100%;
+	height: 100vh;
 	overflow-x: scroll;
 	overflow-y: hidden;
 }
 
 #projects article {
-	--language-color: red;
-	border-color: var(--language-color);
-	background-color: rgba(var(--language-color), 0.5);
 	width: 200px;
 }
 
 #projects h2 {
 	text-align: center;
-}
-
-#blog article {
-	border-color: blue;
-	background-color: rgba(0, 0, 255, 0.1);
 }
 
 article .text {
