--- a/style.css
+++ b/style.css
@@ -131,13 +131,11 @@ article section {
 
 #projects {
 	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
+	flex-flow: row nowrap;
 	align-content: flex-start;
 	justify-content: flex-start;
 	flex-shrink: 2;
-	overflow-x: scroll;
-	overflow-y: hidden;
+	overflow-y: scroll;
 	padding: 5px;
 }
 #page-home #projects {
