--- a/style.css
+++ b/style.css
@@ -135,14 +135,14 @@ article section {
 	align-content: flex-start;
 	justify-content: flex-start;
 	flex-shrink: 2;
-	overflow-y: scroll;
 	padding: 5px;
 }
 #page-home #projects {
 	height: 500px;
+	overflow-y: scroll;
 }
 #page-projects #projects {
-	height: 1000px;
+	height: auto;
 }
 
 #projects article {
