--- a/style.css
+++ b/style.css
@@ -136,8 +136,7 @@ article section {
 #projects {
 	display: flex;
 	flex-flow: row nowrap;
-	align-content: flex-start;
-	justify-content: flex-start;
+	justify-content: center;
 	flex-shrink: 2;
 	padding: 5px;
 }
