--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-:data {
-	--project-background-opacity: 1;
-}
-
 a {
 	color: darkslategray;
 }
@@ -40,17 +36,19 @@ nav {
 	display: flex;
 	justify-content: center;
 	flex-flow: row wrap;
-	border: 2px dashed gray;
-	border-radius: 10px;
 	margin: auto 0px;
+	border: 3px solid rgb(192, 192, 192);
+	background-color: rgba(192, 192, 192, 0.15);
+	border-radius: 10px;
 }
 
 nav p {
 	padding: 2px 4px;
-	margin: 12px 12px;
+	margin: 8px;
 	font-family: monospace;
 	font-size: 14pt;
-	border: 1pt dashed black;
+	border: 2px solid rgb(192, 192, 192);
+	background-color: white;
 	border-radius: 5px;
 }
 
