--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body > h2 a {
 article {
 	display: flex;
 	flex-flow: row wrap;
+	justify-content: center;
 	padding: 10px;
 	margin: 15px;
 	border: 5px solid; /* color defined independently below */
@@ -145,7 +146,6 @@ article .text {
 .feed section.link {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-around;
 	text-align: center;
 	margin: auto 0px;
 }
@@ -157,11 +157,12 @@ article h3 {
 }
 
 article h3 {
-	font-size: 20pt;
+	font-size: 18pt;
 	text-align: center;
 }
 
 article a {
 	font-weight: bold;
 	font-size: 12pt;
+	text-align: center;
 }
