--- a/theme.css
+++ b/theme.css
@@ -11,7 +11,7 @@ p, li {
 
 /* normal links to other content */
 a {
-	font-family: "Roboto Mono", sans-serif;
+	font-family: inherit;
 	text-decoration: none;
 	color: #777;
 }
