--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav p {
 footer {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: space-around;
+	justify-content: flex-start;
 	margin: 5px;
 }
 
