--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,14 @@ a:hover {
   margin-bottom: 50px;
 }
 
-.App > p {
+.Home > p {
   text-align: left;
   margin: 10px auto;
   margin-top: 30px;
   max-width: min(600px, 80vw);
 }
 
-.App > p:last-of-type {
+.Home > p:last-of-type {
   text-align: center;
 }
 
