changed various previews to use inheritance... prepping for file scan

--- a/src/App.css
+++ b/src/App.css
@@ -35,11 +35,11 @@ a:hover {
   text-align: center;
 }
 
-.Projects {
+.Project {
   --color: 175, 113, 37;
 }
 
-.Books {
+.Book {
   --color: 240, 223, 101;
 }
 
