--- a/src/App.scss
+++ b/src/App.scss
@@ -1,23 +1,51 @@
+header,
+footer {
+	display: flex;
+	flex-flow: row nowrap;
+	overflow-x: scroll;
+	justify-content: left;
+	align-items: center;
+
+	padding: 5px 7px;
+
+	background-color: #ddd;
+	color: #444;
+
+	* {
+		margin: 0 5px;
+		&:first-child {
+			margin-left: 0px;
+		}
+		&:last-child {
+			margin-right: 0px;
+		}
+	}
+
+	a {
+		color: inherit;
+	}
+}
+
 a {
-  text-decoration: none;
-  color: lightslategrey;
+	text-decoration: none;
+	color: lightslategrey;
 }
 
 .exposition {
-  width: 80%;
-  max-width: 800px;
-  margin: auto;
+	width: 80%;
+	max-width: 800px;
+	margin: auto;
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: sans-serif;
-  }
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-family: sans-serif;
+	}
 
-  p {
-    font-size: 14pt;
-  }
+	p {
+		font-size: 14pt;
+	}
 }
