--- a/src/App.scss
+++ b/src/App.scss
@@ -23,15 +23,21 @@ footer {
 
 	a {
 		color: inherit;
+		text-decoration: none;
 	}
 }
 
-a {
-	text-decoration: none;
-	color: lightslategrey;
+main {
+	a {
+		color: #236cba;
+		text-decoration: none;
+		span {
+			text-decoration: underline;
+		}
+	}
 }
 
-.exposition {
+article {
 	width: 80%;
 	max-width: 800px;
 	margin: auto;
@@ -47,5 +53,15 @@ a {
 
 	p {
 		font-size: 14pt;
+	}
+
+	span.paren {
+		color: #888;
+		&::before {
+			content: "(";
+		}
+		&::after {
+			content: ")";
+		}
 	}
 }
