css margin adjustment as procrastination

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,8 @@ main {
 }
 
 article {
+	margin: 50px auto;
+
 	h1,
 	h2,
 	h3,
@@ -65,12 +67,7 @@ article {
 			}
 		}
 
-		& + h1,
-		& + h2,
-		& + h3,
-		& + h4,
-		& + h5,
-		& + h6 {
+		& + *:not(p) {
 			margin-top: 25px;
 		}
 	}
