--- a/src/App.scss
+++ b/src/App.scss
@@ -10,11 +10,15 @@ footer {
 
 	background-color: #ddd;
 	color: #444;
+	font-family: sans-serif;
 
 	* {
 		margin: 0 5px;
+		font-size: inherit;
+
 		&:first-child {
 			margin-left: 0px;
+			font-weight: bold;
 		}
 		&:last-child {
 			margin-right: 0px;
@@ -25,6 +29,12 @@ footer {
 		color: inherit;
 		text-decoration: none;
 	}
+}
+header {
+	font-size: 15pt;
+}
+footer {
+	font-size: 11pt;
 }
 
 main {
