--- a/src/Reading/Reading.scss
+++ b/src/Reading/Reading.scss
@@ -11,7 +11,7 @@
 		display: flex;
 		flex-flow: column nowrap;
 		align-items: center;
-		width: 180px;
+		width: 175px;
 		margin: 10px 20px;
 		padding: 6px;
 		box-shadow: 4px 2px 10px gray;
@@ -19,7 +19,7 @@
 		border-radius: 10px;
 		cursor: default;
 
-		> span {
+		> * {
 			display: inline-block;
 			margin: 2px;
 		}
@@ -34,8 +34,14 @@
 			font-size: 12pt;
 		}
 
-		.author {
+		.authors {
 			font-size: 11pt;
+			display: flex;
+			flex-flow: row wrap;
+			justify-content: center;
+			.author {
+				margin: 0 4px;
+			}
 		}
 	}
 }
