--- a/src/Reading/Reading.scss
+++ b/src/Reading/Reading.scss
@@ -4,44 +4,54 @@
 	height: 80vh;
 	overflow-x: scroll;
 	overflow-y: hidden;
+}
 
-	.book {
-		font-family: sans-serif;
-		text-align: center;
-		display: flex;
-		flex-flow: column nowrap;
-		align-items: center;
-		width: 175px;
-		margin: 10px 20px;
-		padding: 6px;
+.book {
+	font-family: sans-serif;
+	text-align: center;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	width: 175px;
+	margin: 10px 20px;
+	padding: 6px;
+
+	border: 1px solid gray;
+	border-radius: 10px;
+	cursor: default;
+
+	// add a shadow if it links to something (<-> there's a post about it)
+	a > & {
 		box-shadow: 4px 2px 10px gray;
-		border: 1px solid gray;
-		border-radius: 10px;
-		cursor: default;
-
-		> * {
-			display: inline-block;
-			margin: 2px;
+		color: black;
+		cursor: pointer;
+		* {
+			text-decoration: none;
 		}
+	}
 
-		.title {
-			font-weight: bold;
-			font-size: 15pt;
-		}
+	> * {
+		display: inline-block;
+		margin: 2px;
+	}
 
-		.subtitle {
-			font-style: italic;
-			font-size: 12pt;
-		}
+	.title {
+		font-weight: bold;
+		font-size: 15pt;
+	}
 
-		.authors {
-			font-size: 11pt;
-			display: flex;
-			flex-flow: row wrap;
-			justify-content: center;
-			.author {
-				margin: 0 4px;
-			}
+	.subtitle {
+		font-style: italic;
+		font-size: 12pt;
+	}
+
+	.authors {
+		font-size: 11pt;
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: center;
+		.author {
+			margin: 0 4px;
 		}
 	}
 }
