various quote loading/display tweaks, Holt learn

--- a/src/Components/Posts/ReadingPost.scss
+++ b/src/Components/Posts/ReadingPost.scss
@@ -1,6 +1,11 @@
 .quote {
 	margin: auto;
-	padding: 10px 0;
+	padding: 5px 0;
+
+	:not(.quote) + &,
+	& + :not(.quote) {
+		margin-top: 25px;
+	}
 
 	.anchor {
 		float: left;
