--- a/src/Components/Book.scss
+++ b/src/Components/Book.scss
@@ -2,6 +2,8 @@
 	display: flex;
 	flex-flow: column wrap;
 	height: 80vh;
+	width: 100vw;
+	margin-left: -10vw;
 	overflow-x: scroll;
 	overflow-y: hidden;
 }
