--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,11 +8,7 @@ body {
 
 a {
   color: inherit;
-  text-decoration: underline;
-
-  &.subtle {
-    text-decoration: none;
-  }
+  text-decoration: none;
 }
 
 * {
@@ -44,4 +40,9 @@ a {
 
 main {
   grid-area: main;
+
+  > * {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
