--- a/styles/Logo.module.scss
+++ b/styles/Logo.module.scss
@@ -7,14 +7,13 @@
 }
 
 .headshot {
-  background-image: url(https://cdn.shopify.com/s/files/1/0533/2089/files/placeholder-images-image_large.png?format=jpg&quality=90&v=1530129081);
+  background-image: url(/profile.png);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 200%;
+  background-size: contain;
   border-radius: 25%;
   height: 3.5em;
   width: 3.5em;
-  box-shadow: 0 0 10px gray;
 }
 
 .name {
