--- a/styles/SocialMediaProfiles.module.scss
+++ b/styles/SocialMediaProfiles.module.scss
@@ -1,24 +1,24 @@
 .socialMediaProfiles {
   display: grid;
-  width: 80%;
+  max-width: 80%;
 
   > * {
     --color: none; // set programatically
     color: var(--color);
     text-align: center;
     height: 75px;
-    width: 275px;
 
     display: flex;
     flex-flow: row nowrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     img {
       float: left;
       max-height: 35px;
       max-width: 45px;
-      margin: 20px;
+      margin-left: 10px;
+      margin-right: 15px;
     }
 
     span {
