--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,13 +21,13 @@ a {
   width: 100vw;
 
   grid-template-columns: 1fr 800px 1fr;
-  grid-template-rows: 50px 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     'header header header'
     '. main .';
 
   &.root {
-    grid-template-columns: 1fr 800px 1fr;
+    grid-template-columns: 1fr auto 1fr;
     grid-template-rows: 1fr 75px auto 50px 1fr;
     grid-template-areas:
       '. . .'
@@ -41,8 +41,22 @@ a {
 main {
   grid-area: main;
 
+  width: 100vw;
+  max-width: 800px;
+
   > * {
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+  }
+}
+
+p {
+  font-size: 14pt;
+  width: 80%;
+  a {
+    text-decoration: underline;
+    text-decoration-thickness: 2px;
+    text-decoration-color: lightgray;
   }
 }
