--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
   grid-area: header;
