--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,29 +3,29 @@
   --color-tan: #f8f7ef;
   --color-red: #c04d4b;
 }
+> * {
+  width: 90vw;
+  max-width: 600px;
+  text-align: justify;
+}
 
-main {
-  ul,
-  ol,
-  p {
-    font-size: 14pt;
-    max-width: 600px;
-    text-align: justify;
-
-    a {
-      text-decoration: underline;
-    }
+ul,
+ol,
+p {
+  font-size: 14pt;
+  a {
+    text-decoration: underline;
   }
+}
 
-  // part headings in /books/[id]
-  h5 {
-    font-size: 15pt;
-  }
+// part headings in /books/[id]
+h5 {
+  font-size: 15pt;
+}
 
-  // chapter headings in /books/[id]
-  h6 {
-    font-size: 14pt;
-  }
+// chapter headings in /books/[id]
+h6 {
+  font-size: 14pt;
 }
 
 html,
@@ -51,7 +51,7 @@ a {
   min-height: 100vh;
   width: 100vw;
 
-  grid-template-columns: 1fr 800px 1fr;
+  grid-template-columns: 1fr auto 1fr;
   grid-template-rows: auto 1fr;
   grid-template-areas:
     'header header header'
@@ -74,20 +74,50 @@ a {
       background-color: var(--color-tan);
       border-radius: 40px;
       width: auto;
-      padding: 20px 40px;
+      padding-top: 20px;
+      padding-bottom: 20px;
     }
   }
 }
 
 main {
   grid-area: main;
-
   width: 100vw;
   max-width: 800px;
 
   > * {
     margin-left: auto;
     margin-right: auto;
+    text-align: justify;
+    width: 90vw;
+    max-width: 600px;
+  }
+
+  ul,
+  ol,
+  p {
+    font-size: 14pt;
+    a {
+      text-decoration: underline;
+    }
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     text-align: center;
+  }
+
+  // part headings in /books/[id]
+  h5 {
+    font-size: 15pt;
+  }
+
+  // chapter headings in /books/[id]
+  h6 {
+    font-size: 14pt;
   }
 }
